feat: Handle importing better

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,7 @@
   <body>
     <div class="row">
       <button id="add_btn">Follow</button>
-      <button>Import</button>
+      <button id="import_btn">Import</button>
     </div>
     <div id="list"></div>
     <script src="popup.js"></script>
